--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "exclude": ["typescript"],
+
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
